--- a/manifest.yml
+++ b/manifest.yml
@@ -6,10 +6,9 @@
 #
 # dependencies:
 #   # Pip dependencies on PyPI
-#   python:
-#     - requests
-#     - gensim
-#
+   python:
+     - requests
+
 #   # Install packages with the system package manager
 #   # This searches for the provided executable and uses the package names
 #   system:
