--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -1,22 +1,22 @@
 
 skillMetadata:
   sections:
-    - name: Options << Name of section
+    - name: Sonos Node Server IP Address
       fields:
-        - name: internal_python_variable_name
+        - name: sonos_node_server_ip_explanation_label
+          type: label
+          label: Enter here the (local) IP Address or Hostname of your Sonos Node JS HTTP Server
+        - name: sonos_server_ip
           type: text
-          label: Setting Friendly Display Name
+          label: IP Address or Hostname
           value: ""
-          placeholder: demo prompt in the input box
-    - name: Login << Name of another section
+
+    - name: Room
       fields:
-        - type: label
-          label: Just a little bit of extra info for the user to understand following settings
-        - name: username
+        - name: room_explanation_label
+          type: label
+          label: The room your Mycroft device is located in
+        - name: room
           type: text
-          label: Username
-          value: ""
-        - name: password
-          type: password
-          label: Password
+          label: room
           value: ""
